[gd_scene load_steps=44 format=3 uid="uid://dk28hompqxrau"]

[ext_resource type="Texture2D" uid="uid://bb33uer4wtrtu" path="res://Assets/아이템/Checkpoints/Checkpoint/Checkpoint (No Flag).png" id="1_cdwub"]
[ext_resource type="Script" uid="uid://d2lt20ojae1d3" path="res://Scripts/check_point.gd" id="1_wxktv"]
[ext_resource type="Texture2D" uid="uid://bnnkgxorlpd1x" path="res://Assets/아이템/Checkpoints/Checkpoint/Checkpoint (Flag Out) (64x64).png" id="2_wxktv"]
[ext_resource type="Texture2D" uid="uid://cb5dcwa2a8y5x" path="res://Assets/아이템/Checkpoints/Checkpoint/Checkpoint (Flag Idle)(64x64).png" id="3_2brk5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ubc6"]
atlas = ExtResource("1_cdwub")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khe2h"]
atlas = ExtResource("2_wxktv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02wtv"]
atlas = ExtResource("2_wxktv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lde4x"]
atlas = ExtResource("2_wxktv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_008a0"]
atlas = ExtResource("2_wxktv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oeur"]
atlas = ExtResource("2_wxktv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2jrh"]
atlas = ExtResource("2_wxktv")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwi57"]
atlas = ExtResource("2_wxktv")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njygt"]
atlas = ExtResource("2_wxktv")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilvb6"]
atlas = ExtResource("2_wxktv")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u18x"]
atlas = ExtResource("2_wxktv")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1vs1"]
atlas = ExtResource("2_wxktv")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr7bg"]
atlas = ExtResource("2_wxktv")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca8g2"]
atlas = ExtResource("2_wxktv")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ecu"]
atlas = ExtResource("2_wxktv")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t4is"]
atlas = ExtResource("2_wxktv")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei5c7"]
atlas = ExtResource("2_wxktv")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsm0t"]
atlas = ExtResource("2_wxktv")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57nxl"]
atlas = ExtResource("2_wxktv")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwta4"]
atlas = ExtResource("2_wxktv")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r843t"]
atlas = ExtResource("2_wxktv")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_npe4e"]
atlas = ExtResource("2_wxktv")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxt5s"]
atlas = ExtResource("2_wxktv")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs6ge"]
atlas = ExtResource("2_wxktv")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gtcx"]
atlas = ExtResource("2_wxktv")
region = Rect2(1472, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cnst"]
atlas = ExtResource("2_wxktv")
region = Rect2(1536, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3egv"]
atlas = ExtResource("2_wxktv")
region = Rect2(1600, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k3vb"]
atlas = ExtResource("3_2brk5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f685"]
atlas = ExtResource("3_2brk5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbsls"]
atlas = ExtResource("3_2brk5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5xi"]
atlas = ExtResource("3_2brk5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0opy3"]
atlas = ExtResource("3_2brk5")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7dl3"]
atlas = ExtResource("3_2brk5")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx0a5"]
atlas = ExtResource("3_2brk5")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smd2l"]
atlas = ExtResource("3_2brk5")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvp2i"]
atlas = ExtResource("3_2brk5")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdnnh"]
atlas = ExtResource("3_2brk5")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bmcp8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ubc6")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khe2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02wtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lde4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_008a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oeur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2jrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwi57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njygt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilvb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u18x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1vs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr7bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca8g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ecu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t4is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei5c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsm0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57nxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwta4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r843t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npe4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxt5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs6ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gtcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cnst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3egv")
}],
"loop": false,
"name": &"flagin",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k3vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f685")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbsls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0opy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7dl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx0a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smd2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvp2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdnnh")
}],
"loop": true,
"name": &"flagon",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qf2o0"]
size = Vector2(26, 46)

[node name="CheckPoint" type="StaticBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_wxktv")

[node name="Flag" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_bmcp8")
animation = &"flagin"
autoplay = "default"

[node name="CheckArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_qf2o0")

[connection signal="animation_finished" from="Flag" to="." method="_on_flag_animation_finished"]
[connection signal="body_entered" from="CheckArea" to="." method="_on_check_area_body_entered"]
